// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelfServicePreferencesView/> ToggleInput.onChange() should deactivate the report issue policy on the mystore3 store 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service"
            >
              Self-service
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            mystore3
          </li>
        </ol>
      </nav>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="mb-3"
          >
            <h4
              class="preferencesTitle"
            >
              Preferences
            </h4>
            <p
              class="preferencesDescription"
              id="email-capture-help"
            >
              Choose preferences of the actions your customers will be able to take to manage their orders. Note that actions available for each
              <span
                id="orders-shipments"
              >
                <b>
                   order’s shipments
                </b>
              </span>
               
              depend on their statuses.
               
              <a
                href="https://docs.gorgias.com/self-service/self-service-portal-statuses"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>
               
              about all existing order shipment statuses & corresponding available actions.
            </p>
            <div
              class="alert warning mb16"
            >
              <div
                class="iconContainer"
              >
                <img
                  alt="upgrade-icon"
                  class="upgradeIcon"
                  src="test-file-stub"
                />
              </div>
              <div
                class="content"
              >
                <span
                  class="label"
                >
                  Speak to one of our specialists to learn more about our automation add-on!
                </span>
                <div
                  class="customActions"
                >
                  <a
                    class="actionLink"
                    to="#"
                  >
                    Contact Us
                  </a>
                </div>
              </div>
            </div>
            <table
              class="table"
            >
              <tbody>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      class="container"
                      for="toggle-button-42"
                    >
                      <input
                        checked=""
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <div
                      class="policyRowInfo"
                    >
                      <div
                        class="content"
                      >
                        <span
                          class="policyName"
                        >
                          Track
                        </span>
                        <span
                          class="policyDescription"
                        >
                          Let customers track  orders directly from the  Self-service Portal in chat  and help center
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="smallest align-middle"
                  />
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      class="container"
                      for="toggle-button-42"
                    >
                      <input
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <div
                      class="policyRowInfo"
                    >
                      <div
                        class="content"
                      >
                        <span
                          class="policyName"
                        >
                          Report issue
                        </span>
                        <span
                          class="policyDescription"
                        >
                          Let customers report an issue with an order
                        </span>
                      </div>
                      <div>
                        <div
                          class="d-flex align-items-center upgradeLink"
                        >
                          <button
                            class="wrapper primary medium"
                          >
                            <span
                              class="wrapper"
                            >
                              Get Automation Features
                              <i
                                class="material-icons icon isRight medium"
                              >
                                auto_awesome
                              </i>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="smallest align-middle"
                  />
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      class="container"
                      for="toggle-button-42"
                    >
                      <input
                        checked=""
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences/returns"
                    >
                      <div
                        class="policyRowInfo"
                      >
                        <div
                          class="content"
                        >
                          <span
                            class="policyName"
                          >
                            Return
                          </span>
                          <span
                            class="policyDescription"
                          >
                            Let customers track orders directly  from the Self-service Portal in chat  and help center
                          </span>
                        </div>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences/returns"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      class="container"
                      for="toggle-button-42"
                    >
                      <input
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences/cancellations"
                    >
                      <div
                        class="policyRowInfo"
                      >
                        <div
                          class="content"
                        >
                          <span
                            class="policyName"
                          >
                            Cancel
                          </span>
                          <span
                            class="policyDescription"
                          >
                            Let customers request order cancellations  directly from the Self-service Portal in chat  and help center
                          </span>
                        </div>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences/cancellations"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelfServicePreferencesView/> render() should render the 4 policy rows, 2 active and 2 inactive 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service"
            >
              Self-service
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            mystore1
          </li>
        </ol>
      </nav>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="mb-3"
          >
            <h4
              class="preferencesTitle"
            >
              Preferences
            </h4>
            <p
              class="preferencesDescription"
              id="email-capture-help"
            >
              Choose preferences of the actions your customers will be able to take to manage their orders. Note that actions available for each
              <span
                id="orders-shipments"
              >
                <b>
                   order’s shipments
                </b>
              </span>
               
              depend on their statuses.
               
              <a
                href="https://docs.gorgias.com/self-service/self-service-portal-statuses"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>
               
              about all existing order shipment statuses & corresponding available actions.
            </p>
            <div
              class="alert warning mb16"
            >
              <div
                class="iconContainer"
              >
                <img
                  alt="upgrade-icon"
                  class="upgradeIcon"
                  src="test-file-stub"
                />
              </div>
              <div
                class="content"
              >
                <span
                  class="label"
                >
                  Speak to one of our specialists to learn more about our automation add-on!
                </span>
                <div
                  class="customActions"
                >
                  <a
                    class="actionLink"
                    to="#"
                  >
                    Contact Us
                  </a>
                </div>
              </div>
            </div>
            <table
              class="table"
            >
              <tbody>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      class="container"
                      for="toggle-button-42"
                    >
                      <input
                        checked=""
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <div
                      class="policyRowInfo"
                    >
                      <div
                        class="content"
                      >
                        <span
                          class="policyName"
                        >
                          Track
                        </span>
                        <span
                          class="policyDescription"
                        >
                          Let customers track  orders directly from the  Self-service Portal in chat  and help center
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="smallest align-middle"
                  />
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      class="container"
                      for="toggle-button-42"
                    >
                      <input
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <div
                      class="policyRowInfo"
                    >
                      <div
                        class="content"
                      >
                        <span
                          class="policyName"
                        >
                          Report issue
                        </span>
                        <span
                          class="policyDescription"
                        >
                          Let customers report an issue with an order
                        </span>
                      </div>
                      <div>
                        <div
                          class="d-flex align-items-center upgradeLink"
                        >
                          <button
                            class="wrapper primary medium"
                          >
                            <span
                              class="wrapper"
                            >
                              Get Automation Features
                              <i
                                class="material-icons icon isRight medium"
                              >
                                auto_awesome
                              </i>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="smallest align-middle"
                  />
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      class="container"
                      for="toggle-button-42"
                    >
                      <input
                        checked=""
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences/returns"
                    >
                      <div
                        class="policyRowInfo"
                      >
                        <div
                          class="content"
                        >
                          <span
                            class="policyName"
                          >
                            Return
                          </span>
                          <span
                            class="policyDescription"
                          >
                            Let customers track orders directly  from the Self-service Portal in chat  and help center
                          </span>
                        </div>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences/returns"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      class="container"
                      for="toggle-button-42"
                    >
                      <input
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences/cancellations"
                    >
                      <div
                        class="policyRowInfo"
                      >
                        <div
                          class="content"
                        >
                          <span
                            class="policyName"
                          >
                            Cancel
                          </span>
                          <span
                            class="policyDescription"
                          >
                            Let customers request order cancellations  directly from the Self-service Portal in chat  and help center
                          </span>
                        </div>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences/cancellations"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
